# rp235x-nokia-3310

./: .gitignore  Cargo.toml  LICENSE  README.md  connection_plate.FCStd  fp-info-cache  nokia.kicad_pcb  nokia.kicad_prl  nokia.kicad_pro  nokia.kicad_sch  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yaml  kicad.yaml  page.yaml  rust.yaml
app/: Cargo.toml
app/src/: buzzer.rs  grid.rs  keypad.rs  lib.rs  menu.rs  otp.rs  snake.rs  text_input.rs
app/src/snake/: cell.rs  model.rs
app_menu/: Cargo.toml
app_menu/src/: lib.rs
clock/: Cargo.toml
clock/src/: lib.rs
docs/: embassy-wasm-example.js  embassy-wasm-example_bg.wasm  index.html
embassy-keypad/: Cargo.toml
embassy-keypad/src/: lib.rs
hardware_test/: Cargo.toml
hardware_test/src/: lib.rs
keyboard/: Cargo.toml
keyboard/src/: lib.rs
main/: Cargo.toml
multi-tap/: Cargo.toml
multi-tap/src/: char.rs  keypad.rs  lib.rs
pcb/: bom.csv  fp-info-cache  kicad_ci_test.kibot.yaml  nokia-bottom-pos.csv  nokia-bottom-pos.numbers  nokia.csv  nokia.kicad_pcb  nokia.kicad_prl  nokia.kicad_pro  nokia.kicad_sch  ~nokia.kicad_pcb.lck
pcb/plots/: nokia-B_Cu.gbl  nokia-B_Mask.gbs  nokia-B_Paste.gbp  nokia-B_Silkscreen.gbo  nokia-Edge_Cuts.gm1  nokia-F_Cu.gtl  nokia-F_Mask.gts  nokia-F_Paste.gtp  nokia-F_Silkscreen.gto  nokia-In1_Cu.g2  nokia-In2_Cu.g3  nokia-NPTH-drl_map.gbr  nokia-NPTH.drl  nokia-PTH-drl_map.gbr  nokia-PTH.drl  nokia-bottom-pos.csv  nokia-top-pos.csv  nokia.cmp
pcd8544/: Cargo.toml
pcd8544/src/: lib.rs
rp/: Cargo.toml  build.rs  memory.x
rp/src/: backlight.rs  button.rs  buzzer.rs  clock.rs  display.rs  keypad.rs  main.rs  matrix.rs  rtc.rs  usb.rs  vibration_motor.rs
rp/src/usb/: handler.rs
rtttl/: Cargo.toml
rtttl/examples/: tone.rs
rtttl/src/: lib.rs  note.rs  note.rso
shared/: Cargo.toml
shared/src/: lib.rs  menu.rs
src/: buzzer.rs  lib.rs  main.rs  matrix.rs  multitap.rs  text_input.rs  usb.rs
src/usb/: handler.rs
web/: Cargo.toml  Trunk.toml  index.html
web/src/: .lib.rs.swp  backlight.rs  buzzer.rs  display.rs  dom_keypad.rs  keypad.rs  lib.rs  power.rs  rtc.rs  stub.rs  vibration_motor.rs
web/src/keypad/: button.rs
