[workspace]
resolver = "2"
members = ["embassy-keypad", "main", "multi-tap", "pcd8544", "rtttl"]

[workspace.dependencies]
multi-tap = { path = "./multi-tap" }
rtttl = { path = "./rtttl" }
pcd8544 = { path = "./pcd8544" }

embedded-hal = { version = "1.0" }
embedded-hal-async = "1.0.0"
defmt = "*"
defmt-rtt = "*"
fixed = "*"
fixed-macro = "*"
cortex-m = { version = "*", features = ["inline-asm"] }
cortex-m-rt = "*"
critical-section = "*"
panic-probe = { version = "*", features = ["print-defmt"] }
usbd-hid = "*"
embedded-graphics = "*"
display-interface-spi = "*"
display-interface = "*"

embassy-embedded-hal = { version = "*", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", version = "*", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", version = "*", features = ["defmt"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", version = "*" }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy.git", version = "*" }

embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", version = "*", features = ["defmt"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", version = "*", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", version = "*", features = ["defmt", "defmt-timestamp-uptime"] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
