[workspace]
resolver = "2"
members = ["embassy-keypad", "rp", "multi-tap", "pcd8544", "rtttl", "web", "app"]

[workspace.dependencies]
multi-tap = { path = "./multi-tap" }
pcd8544 = { path = "./pcd8544" }
rtttl = { path = "./rtttl" }
app = { path = "./app" }

embassy-embedded-hal = { version = "*", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = ["executor-thread", "integrated-timers"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", version = "*" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", version = "*" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", version = "*" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", version = "*", features = ["defmt"] }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy.git", version = "*" }

embedded-graphics = "*"
embedded-hal = { version = "1.0" }
embedded-hal-async = "1.0.0"
fixed = "*"
fixed-macro = "*"
usbd-hid = "*"

# rp235x (targeting 2040 until available)
cortex-m = { version = "*", features = ["inline-asm"] }
cortex-m-rt = "*"
critical-section = "*"
defmt = "*"
defmt-rtt = "*"
display-interface = "*"
display-interface-spi = "*"
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", version = "*", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
panic-probe = { version = "*", features = ["print-defmt"] }

# web
log = "0.4.11"
embedded-graphics-web-simulator = "*"
wasm-bindgen = "0.2"
wasm-logger = "0.2.0"
web-sys = { version = "0.3", features = ["AudioParam", "OscillatorNode", "AudioContext", "Document", "Element", "HtmlElement", "Node", "EventTarget", "MouseEvent", "Window", "OscillatorType", "AudioDestinationNode" ] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
