[workspace]
resolver = "2"
members = ["rp", "shared", "web", "clock", "hardware_test", "app_menu"]

[workspace.dependencies]
# multi-tap = { path = "./multi-tap" }
pcd8544 = { path = "./pcd8544" }
# rtttl = { path = "./rtttl" }
# app = { path = "./app" }

embassy-embedded-hal = { version = "*", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = ["executor-thread", "integrated-timers"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", version = "*" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", version = "*" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", version = "*" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", version = "*", features = ["defmt"] }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy.git", version = "*" }

embedded-graphics = "*"
embedded-hal = { version = "1.0" }
embedded-hal-async = "1.0.0"
fixed = "*"
fixed-macro = "*"
usbd-hid = "*"

cortex-m = { version = "*", features = ["inline-asm"] }
cortex-m-rt = "*"
defmt = "*"
defmt-rtt = "*"
display-interface = "*"
display-interface-spi = "*"
panic-probe = { version = "*", features = ["print-defmt"] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
