[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics = { workspace = true }
fastrand = { version = "2.1.1", default-features = false }
multi-tap = { workspace = true }
embassy-futures = { workspace = true }
embassy-time = { workspace = true }
numtoa = "0.2.4"
totp-rs = { features = ["serde", "gen_secret"], version = "5.6.0", git = "https://github.com/tommy-gilligan/totp-rs.git", branch = "no_std" }
heapless = "0.8.0"

[lints.clippy]
alloc_instead_of_core = "deny"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
arithmetic_side_effects = "deny"
as_conversions = "deny"
as_underscore = "deny"
assertions_on_result_states = "deny"
cfg_not_test = "deny"
clone_on_ref_ptr = "deny"
create_dir = "deny"
dbg_macro = "deny"
decimal_literal_representation = "deny"
default_numeric_fallback = "deny"
default_union_representation = "deny"
deref_by_slicing = "deny"
else_if_without_else = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
exit = "deny"
filetype_is_file = "deny"
float_cmp_const = "deny"
get_unwrap = "deny"
impl_trait_in_params = "deny"
indexing_slicing = "deny"
integer_division = "deny"
integer_division_remainder_used = "deny"
iter_over_hash_type = "deny"
lossy_float_literal = "deny"
map_err_ignore = "deny"
missing_asserts_for_indexing = "deny"
missing_assert_message = "deny"
mod_module_files = "deny"
multiple_inherent_impl = "deny"
mutex_atomic = "deny"
needless_raw_strings = "deny"
non_zero_suggestions = "deny"
panic = "deny"
panic_in_result_fn = "deny"
partial_pub_fields = "deny"
pathbuf_init_then_push = "deny"
pattern_type_mismatch = "deny"
print_stderr = "deny"
print_stdout = "deny"
pub_without_shorthand = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_type_annotations = "deny"
renamed_function_params = "deny"
