[package]
name = "embassy-keypad"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-futures = "0.1.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["embedded-hal-async"] }
tokio = { version = "1.39.3", features = ["rt", "macros"] }
