[package]
edition = "2021"
name = "rp"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
multi-tap = { workspace = true }
rtttl = { workspace = true }
pcd8544 = { workspace = true }

embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
fixed = { workspace = true }
fixed-macro = { workspace = true }
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
critical-section = { workspace = true }
panic-probe = { workspace = true }
usbd-hid = { workspace = true }
embedded-graphics = { workspace = true }
display-interface-spi = { workspace = true }
display-interface = { workspace = true }

embassy-embedded-hal = { workspace = true }
embassy-rp = { workspace = true }
embassy-usb = { workspace = true }
embassy-futures = { workspace = true }
embassy-usb-logger = { workspace = true }

embassy-sync = { workspace = true, features = ["defmt"] }
embassy-executor = { workspace = true, features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { workspace = true, features = ["defmt", "defmt-timestamp-uptime"] }
