[package]
edition = "2021"
name = "rp"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
multi-tap = { workspace = true }
rtttl = { workspace = true }
pcd8544 = { workspace = true }
app = { workspace = true }

embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
fixed = { workspace = true }
fixed-macro = { workspace = true }
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
critical-section = { workspace = true }
panic-probe = { workspace = true }
usbd-hid = { workspace = true }
embedded-graphics = { workspace = true }
display-interface-spi = { workspace = true }
display-interface = { workspace = true }

embassy-embedded-hal = { workspace = true }
embassy-rp = { workspace = true, features = ["chrono", "defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-usb = { workspace = true }
embassy-futures = { workspace = true }
embassy-usb-logger = { workspace = true }

embassy-sync = { workspace = true, features = ["defmt"] }
embassy-executor = { workspace = true, features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { workspace = true, features = ["defmt", "defmt-timestamp-uptime"] }
chrono = { version = "0.4", default-features = false }
heapless = "0.8"

[lints.clippy]
alloc_instead_of_core = "deny"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
arithmetic_side_effects = "deny"
as_conversions = "deny"
as_underscore = "deny"
assertions_on_result_states = "deny"
cfg_not_test = "deny"
clone_on_ref_ptr = "deny"
create_dir = "deny"
dbg_macro = "deny"
decimal_literal_representation = "deny"
default_numeric_fallback = "deny"
default_union_representation = "deny"
deref_by_slicing = "deny"
else_if_without_else = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
exit = "deny"
filetype_is_file = "deny"
float_cmp_const = "deny"
get_unwrap = "deny"
impl_trait_in_params = "deny"
indexing_slicing = "deny"
integer_division = "deny"
integer_division_remainder_used = "deny"
iter_over_hash_type = "deny"
lossy_float_literal = "deny"
map_err_ignore = "deny"
missing_asserts_for_indexing = "deny"
missing_assert_message = "deny"
mod_module_files = "deny"
multiple_inherent_impl = "deny"
mutex_atomic = "deny"
needless_raw_strings = "deny"
non_zero_suggestions = "deny"
panic = "deny"
panic_in_result_fn = "deny"
partial_pub_fields = "deny"
pathbuf_init_then_push = "deny"
pattern_type_mismatch = "deny"
print_stderr = "deny"
print_stdout = "deny"
pub_without_shorthand = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_type_annotations = "deny"
renamed_function_params = "deny"
