[package]
edition = "2021"
name = "embassy-wasm-example"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
app = { workspace = true }
embassy-sync = { workspace = true, features = ["log"] }
embassy-time = { workspace = true, features = ["log", "wasm"] }
embedded-graphics = { workspace = true }
multi-tap = { path = "../multi-tap" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = ["arch-wasm", "executor-thread", "log"] }
log = "0.4.11"
embedded-graphics-web-simulator = { git = "https://github.com/tommy-gilligan/embedded-graphics-web-simulator.git" }
wasm-bindgen = "=0.2.93"
wasm-logger = "0.2.0"
web-sys = { version = "0.3", features = ["DomException", "DomTokenList", "AudioParam", "OscillatorNode", "GainNode", "AudioContext", "Document", "Element", "HtmlElement", "Node", "EventListener", "EventTarget", "MouseEvent", "Window", "OscillatorType", "AudioDestinationNode" ] }
shared = { path = "../shared" }
js-sys = "=0.3.70"
yew = { version = "0.21.0", features = ["csr"] }

[lints.clippy]
alloc_instead_of_core = "deny"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
arithmetic_side_effects = "deny"
as_conversions = "deny"
as_underscore = "deny"
assertions_on_result_states = "deny"
cfg_not_test = "deny"
clone_on_ref_ptr = "deny"
create_dir = "deny"
dbg_macro = "deny"
decimal_literal_representation = "deny"
default_numeric_fallback = "deny"
default_union_representation = "deny"
deref_by_slicing = "deny"
else_if_without_else = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
exit = "deny"
filetype_is_file = "deny"
float_cmp_const = "deny"
get_unwrap = "deny"
impl_trait_in_params = "deny"
indexing_slicing = "deny"
integer_division = "deny"
integer_division_remainder_used = "deny"
iter_over_hash_type = "deny"
lossy_float_literal = "deny"
map_err_ignore = "deny"
missing_asserts_for_indexing = "deny"
missing_assert_message = "deny"
mod_module_files = "deny"
multiple_inherent_impl = "deny"
mutex_atomic = "deny"
needless_raw_strings = "deny"
non_zero_suggestions = "deny"
panic = "deny"
panic_in_result_fn = "deny"
partial_pub_fields = "deny"
pathbuf_init_then_push = "deny"
pattern_type_mismatch = "deny"
print_stderr = "deny"
print_stdout = "deny"
pub_without_shorthand = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_type_annotations = "deny"
renamed_function_params = "deny"
rest_pat_in_fully_bound_structs = "deny"
same_name_method = "deny"
semicolon_inside_block = "deny"
shadow_reuse = "deny"
shadow_unrelated = "deny"
str_to_string = "deny"
string_add = "deny"
string_lit_chars_any = "deny"
string_slice = "deny"
string_to_string = "deny"
suspicious_xor_used_as_pow = "deny"
tests_outside_test_module = "deny"
todo = "deny"
try_err = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
unreachable = "deny"
unseparated_literal_suffix = "deny"
unused_result_ok = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
use_debug = "deny"
verbose_file_reads = "deny"
wildcard_enum_match_arm = "deny"
pedantic = "deny"
correctness = "deny"
suspicious = "deny"
complexity = "deny"
perf = "deny"
style = "deny"
nursery = "deny"
